Fixed z-index issue

--- a/src/styles/pages/blog.css
+++ b/src/styles/pages/blog.css
@@ -27,7 +27,7 @@ li {
   grid-column: span 2;
   margin-bottom: 4rem;
 
-  z-index: 10;
+  /* z-index: 10; */
 }
 
 .blog-topics-list {
